refactor time locking analysis scripts

--- a/raw_data/BJH024/scripts/BJH024_cleaning.ipynb
+++ b/raw_data/BJH024/scripts/BJH024_cleaning.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "a3785b84-4aaa-4461-a37e-b51a7c1c7913",
    "metadata": {},
    "outputs": [],
@@ -45,25 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "1aff0958-6a4e-4e42-b7a6-80d00e5f63f3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: Ignoring XDG_SESSION_TYPE=wayland on Gnome. Use QT_QPA_PLATFORM=wayland to run on Wayland anyway.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%matplotlib qt5"
+    "# %matplotlib qt5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "639733c6-a51d-4ba2-b0bc-64689a345199",
    "metadata": {},
    "outputs": [],
@@ -96,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "2794e660-c449-4c7a-968f-87124f1044ea",
    "metadata": {},
    "outputs": [],
@@ -110,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "6e0deb60-8aca-4c57-a879-9fb9fb6d1d8e",
    "metadata": {},
    "outputs": [
@@ -138,10 +130,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "22556d7c-0c0b-40fc-82b1-777357649e6e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading 0 ... 4365199  =      0.000 ...  2182.599 secs...\n",
+      "Filtering raw data in 1 contiguous segment\n",
+      "Setting up band-pass filter from 1 - 1.5e+02 Hz\n",
+      "\n",
+      "FIR filter parameters\n",
+      "---------------------\n",
+      "Designing a one-pass, zero-phase, non-causal bandpass filter:\n",
+      "- Windowed time-domain design (firwin) method\n",
+      "- Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation\n",
+      "- Lower passband edge: 1.00\n",
+      "- Lower transition bandwidth: 1.00 Hz (-6 dB cutoff frequency: 0.50 Hz)\n",
+      "- Upper passband edge: 150.00 Hz\n",
+      "- Upper transition bandwidth: 37.50 Hz (-6 dB cutoff frequency: 168.75 Hz)\n",
+      "- Filter length: 6601 samples (3.300 sec)\n",
+      "\n",
+      "Setting up band-stop filter\n",
+      "\n",
+      "FIR filter parameters\n",
+      "---------------------\n",
+      "Designing a one-pass, zero-phase, non-causal bandstop filter:\n",
+      "- Windowed time-domain design (firwin) method\n",
+      "- Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation\n",
+      "- Lower transition bandwidth: 0.50 Hz\n",
+      "- Upper transition bandwidth: 0.50 Hz\n",
+      "- Filter length: 13201 samples (6.601 sec)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "## Filtering ##\n",
     "\n",
@@ -158,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "06a738f0-dbc3-4e9b-807c-d21e8eb4fd28",
    "metadata": {},
    "outputs": [
@@ -193,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "c262fbb5-6908-4a46-b03c-d815dbe2dc0d",
    "metadata": {},
    "outputs": [
@@ -459,7 +484,7 @@
        " 'STI']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "7d0a4343-948a-4654-bc8f-db9c42ded9bb",
    "metadata": {},
    "outputs": [
@@ -567,7 +592,7 @@
        "<Raw | BJH024_notched_filtered_ieeg.fif, 257 x 4365200 (2182.6 s), ~258 kB, data not loaded>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "14a28078-93dd-4d34-b19b-a6ee581b9504",
    "metadata": {},
    "outputs": [
@@ -659,7 +684,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "        <th>Bad channels</th>\n",
-       "        <td>REF1, REF2, EKG1, EKG2, REF1, REF2, EKG1, EKG2, EL2, EL3, GL1, GL2, HL4, HL3, HL2, ER7, HL1, FL8, IR1, IR2, IR3, HR1, FP1, F3, C3, P3, O1, FP2, F4, C4, P4, O2, F7, T7, P7, F8, T8, P8, F9, F10, FPZ, FZ, CZ, PZ, OZ, EKG1, EKG2</td>\n",
+       "        <td>REF1, REF2, EKG1, EKG2, EL2, EL3, GL1, GL2, HL4, HL3, HL2, ER7, HL1, FL8, IR1, IR2, IR3, HR1, HR2, FP1, F3, C3, P3, O1, FP2, F4, C4, P4, O2, F7, T7, P7, F8, T8, P8, F9, F10, FPZ, FZ, CZ, PZ, OZ, EKG1, EKG2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <th>EOG channels</th>\n",
@@ -703,7 +728,7 @@
        "<Raw | BJH024_raw_ieeg.fif, 257 x 4365200 (2182.6 s), ~258 kB, data not loaded>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +746,7 @@
     "raw_fif.info['bads'].extend(bad_channels)  \n",
     "\n",
     "# # remove epileptic electrodes\n",
-    "bob_cleaned_bad_channels = ['EL2', 'EL3', 'GL1', 'GL2', 'HL4', 'HL3', 'HL2', 'ER7', 'HL1', 'FL8', 'IR1', 'IR2', 'IR3', 'HR1']\n",
+    "bob_cleaned_bad_channels = ['EL2', 'EL3', 'GL1', 'GL2', 'HL4', 'HL3', 'HL2', 'ER7', 'HL1', 'FL8', 'IR1', 'IR2', 'IR3', 'HR1', 'HR2']\n",
     "raw_fif.info['bads'].extend(bob_cleaned_bad_channels)  \n",
     "\n",
     "\n",
@@ -758,119 +783,188 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b2bf3fa-52de-40bf-9e33-0d2f57157ad2",
+   "id": "4eb6fb37-0d96-40fb-bd57-12e4e1516861",
    "metadata": {},
    "source": [
-    "#### Bad Epochs\n",
+    "#### Bad Epochs from noisy data\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8f753563-acfd-4968-9f1a-2ec8274e9570",
+   "execution_count": 24,
+   "id": "1489bf68-ec2a-4082-83e6-08fb73b095cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # Annotate Noisy Epochs from Bob's cleaning\n",
     "\n",
-    "# ### Filtered\n",
-    "\n",
-    "# onsets = [filtered_notch_data\n",
-    "#     filtered_notch_data.first_time + 78, #2\n",
-    "#     filtered_notch_data.first_time + 173, #2\n",
-    "#     filtered_notch_data.first_time + 414, #2\n",
-    "#     filtered_notch_data.first_time + 438, #1\n",
-    "#     filtered_notch_data.first_time + 475, #.6\n",
-    "#     filtered_notch_data.first_time + 564, #1\n",
-    "#     filtered_notch_data.first_time + 625, #2\n",
-    "#     filtered_notch_data.first_time + 654.5, #1\n",
-    "#     filtered_notch_data.first_time + 690, #1\n",
-    "#     filtered_notch_data.first_time + 736.75, #1\n",
-    "#     filtered_notch_data.first_time + 852, #1\n",
-    "#     filtered_notch_data.first_time + 1391 #2\n",
-    "    \n",
-    "# ]\n",
-    "\n",
-    "# ### Raw\n",
-    "\n",
-    "# onsets = [\n",
-    "#     raw_fif.first_time + 78, #2\n",
-    "#     raw_fif.first_time + 173, #2\n",
-    "#     raw_fif.first_time + 414, #2\n",
-    "#     raw_fif.first_time + 438, #1\n",
-    "#     raw_fif.first_time + 475, # .6\n",
-    "#     raw_fif.first_time + 564, #1\n",
-    "#     raw_fif.first_time + 625, #2\n",
-    "#     raw_fif.first_time + 654.5, #1\n",
-    "#     raw_fif.first_time + 690, #1\n",
-    "#     raw_fif.first_time + 736.75, #1\n",
-    "#     raw_fif.first_time + 852, #1    \n",
-    "#     raw_fif.first_time + 1391 #2\n",
-    "    \n",
-    "    \n",
-    "# ]\n",
-    "\n",
-    "\n",
-    "# durations = [2, 2, 2, 1, .6, 1, 2, 1, 1, 1, 1, 2]\n",
-    "# descriptions = ['bad'] * len(durations)\n"
+    "# read from csv from interactive session\n",
+    "bad_annots = mne.read_annotations('../ieeg/saved_annotations.fif')   \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "93a39942-a7c7-40ab-a009-8eae6c970cd7",
-   "metadata": {},
+   "id": "f0ca78a9-9f31-43fe-9616-98e68c4adaff",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Cleaning Bad Trials"
+    "#### Bad epochs from bad trial data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "80fdc820-448a-482b-885b-487c0e9e486a",
+   "execution_count": 25,
+   "id": "edaeedf9-32e9-42e5-b5e9-92e632e83764",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ## quality check trials ##\n",
     "\n",
-    "# # calculate trial onsets and offsets\n",
-    "# sti_raw = filtered_notch_data.get_data(picks = ['STI'])\n",
-    "# lengths, positionsm, val  = rle(sti_raw[0])\n",
+    "# calculate trial onsets and offsets\n",
+    "sti_raw = filtered_notch_data.get_data(picks = ['STI'])\n",
+    "lengths, positionsm, val  = rle(sti_raw[0])\n",
     "\n",
-    "# # lengths, beginnings, endings, for trials\n",
-    "# trial_lengths = [lengths[x] for x in np.where(val == 1)]\n",
-    "# trial_begins = [positionsm[x] for x in np.where(val == 1)]\n",
-    "# trial_ends = trial_lengths[0] + trial_begins[0]\n",
-    "# trial_baseline = trial_begins[0] - 1000\n",
+    "# lengths, beginnings, endings, for trials\n",
+    "trial_lengths = [lengths[x] for x in np.where(val == 1)]\n",
+    "trial_begins = [positionsm[x] for x in np.where(val == 1)]\n",
+    "trial_ends = trial_lengths[0] + trial_begins[0]\n",
+    "trial_baseline = trial_begins[0] - 1000\n",
     "\n",
-    "# # lengths, beginnings, endings, for itis\n",
-    "# iti_lengths = [lengths[x] for x in np.where(val == 0)]\n",
-    "# iti_begins = [positionsm[x] for x in np.where(val == 0)]\n",
-    "# iti_ends = iti_begins[0] + iti_lengths[0]\n",
+    "# lengths, beginnings, endings, for itis\n",
+    "iti_lengths = [lengths[x] for x in np.where(val == 0)]\n",
+    "iti_begins = [positionsm[x] for x in np.where(val == 0)]\n",
+    "iti_ends = iti_begins[0] + iti_lengths[0]\n",
     "\n",
-    "# # save trial lengths for later\n",
-    "# np.save(f\"{preproc_data_dir}/{subject}_trial_lengths.npy\", trial_lengths)"
+    "# save trial lengths for later\n",
+    "np.save(f\"{preproc_data_dir}/{subject}_trial_lengths.npy\", trial_lengths)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ec9911ea-8747-4d0d-985a-741289f97a3d",
+   "execution_count": 26,
+   "id": "456bc9f7-7046-4d7a-8918-0a705e0e573d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # exclude bad trials/apochs from r behavioral analysis (paused trials and no biscuits)\n",
     "\n",
-    "# # load bad trial data\n",
-    "# bad_trials = np.genfromtxt(f\"{raw_data_dir}/behave/{subject}_bad_trials.csv\", delimiter = ',', skip_header = 1)\n",
+    "# load bad trial data\n",
+    "bad_trials = np.genfromtxt(f\"{raw_data_dir}/behave/{subject}_bad_trials.csv\", delimiter = ',', skip_header = 1)\n",
     "\n",
-    "# for bad in bad_trials:\n",
-    "#     start, dur = find_bad_trial_times(int(bad), 2000, trial_begins, trial_lengths)\n",
-    "#     onsets.append(start)\n",
-    "#     durations.append(dur)\n",
+    "onsets = []\n",
+    "durations = []\n",
+    "for bad in bad_trials:\n",
+    "    start, dur = find_bad_trial_times(int(bad), raw_fif.info['sfreq'], trial_begins, trial_lengths)\n",
+    "    onsets.append(start)\n",
+    "    durations.append(dur)\n",
     "\n",
-    "# # update descriptions\n",
-    "# descriptions = ['bad'] * len(durations)\n"
+    "# update descriptions\n",
+    "descriptions = ['bad'] * len(durations)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "46855fa0-daea-4e8a-b4af-fc72ba6a8f21",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"table table-hover table-striped table-sm table-responsive small\">\n",
+       "    <tr>\n",
+       "        <th>Measurement date</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Experimenter</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "        <th>Participant</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Digitized points</th>\n",
+       "        \n",
+       "        <td>0 points</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Good channels</th>\n",
+       "        <td>256 sEEG, 1 Stimulus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Bad channels</th>\n",
+       "        <td>REF1, REF2, EKG1, EKG2, EL2, EL3, GL1, GL2, HL4, HL3, HL2, ER7, HL1, FL8, IR1, IR2, IR3, HR1, HR2, FP1, F3, C3, P3, O1, FP2, F4, C4, P4, O2, F7, T7, P7, F8, T8, P8, F9, F10, FPZ, FZ, CZ, PZ, OZ, EKG1, EKG2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>EOG channels</th>\n",
+       "        <td>Not available</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>ECG channels</th>\n",
+       "        <td>Not available</td>\n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Sampling frequency</th>\n",
+       "        <td>2000.00 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Highpass</th>\n",
+       "        <td>0.00 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Lowpass</th>\n",
+       "        <td>1000.00 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Filenames</th>\n",
+       "        <td>BJH024_raw_ieeg.fif&lt;br&gt;BJH024_raw_ieeg-1.fif&lt;br&gt;BJH024_raw_ieeg-2.fif</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Duration</th>\n",
+       "        <td>00:36:22 (HH:MM:SS)</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Raw | BJH024_raw_ieeg.fif, 257 x 4365200 (2182.6 s), ~258 kB, data not loaded>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## exclude all bad epochs from both bad trials and investigating neural data ##\n",
+    "\n",
+    "# combine with bad trial data #\n",
+    "bad_annots.append(onsets, durations, descriptions)\n",
+    "\n",
+    "# # apply to filtered data #\n",
+    "filtered_notch_data.set_annotations(bad_annots)\n",
+    "\n",
+    "# # apply to not filtered data #\n",
+    "raw_fif.set_annotations(bad_annots)"
    ]
   },
   {
@@ -879,29 +973,6 @@
    "metadata": {},
    "source": [
     "## Visualizing Neural Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1cee4f7a-7c24-4001-aad1-a4290feeb1a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## exclude all bad epochs from both bad trials and investigating neural data ##\n",
-    "\n",
-    "# # create annotations structure #\n",
-    "# bad_annots = mne.Annotations(onset=onsets,\n",
-    "#                                duration=durations,\n",
-    "#                                description=descriptions,\n",
-    "#                                orig_time=filtered_notch_data.info['meas_date'])\n",
-    "\n",
-    "# # apply to filtered data #\n",
-    "# filtered_notch_data.set_annotations(bad_annots)\n",
-    "\n",
-    "\n",
-    "# # apply to not filtered data #\n",
-    "# raw_fif.set_annotations(bad_annots)"
    ]
   },
   {
@@ -916,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "2c03d392-dd5e-425a-8802-4d78132a4578",
    "metadata": {},
    "outputs": [
@@ -997,7 +1068,7 @@
        "<Raw | BJH024_notched_filtered_ieeg.fif, 215 x 4365200 (2182.6 s), ~215 kB, data not loaded>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,12 +1200,12 @@
    ],
    "source": [
     "# From interactive sessions\n",
-    "interactive_annot = filtered_notch_data.annotations\n",
-    "for x in range(0, 22):\n",
-    "    print(interactive_annot[x])\n",
+    "# interactive_annot = filtered_notch_data.annotations\n",
+    "# for x in range(0, 22):\n",
+    "#     print(interactive_annot[x])\n",
     "    \n",
     "    \n",
-    "filtered_notch_data.annotations.save('../ieeg/saved_annotations.fif', overwrite = True)    "
+    "# filtered_notch_data.annotations.save('../ieeg/saved_annotations.fif', overwrite = True)    "
    ]
   },
   {
@@ -1147,10 +1218,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "83c9a275-c5bd-414a-a3a5-5d30bd0fe689",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting existing file.\n",
+      "Writing /home/brooke/pacman/raw_data/BJH024/ieeg/BJH024_notched_filtered_clean_ieeg.fif\n",
+      "Overwriting existing file.\n",
+      "Writing /home/brooke/pacman/raw_data/BJH024/ieeg/BJH024_notched_filtered_clean_ieeg-1.fif\n",
+      "Overwriting existing file.\n",
+      "Writing /home/brooke/pacman/raw_data/BJH024/ieeg/BJH024_notched_filtered_clean_ieeg-2.fif\n",
+      "Closing /home/brooke/pacman/raw_data/BJH024/ieeg/BJH024_notched_filtered_clean_ieeg-2.fif\n",
+      "Closing /home/brooke/pacman/raw_data/BJH024/ieeg/BJH024_notched_filtered_clean_ieeg-1.fif\n",
+      "Closing /home/brooke/pacman/raw_data/BJH024/ieeg/BJH024_notched_filtered_clean_ieeg.fif\n",
+      "[done]\n",
+      "Overwriting existing file.\n",
+      "Writing /home/brooke/pacman/raw_data/BJH024/ieeg/BJH024_raw_clean_ieeg.fif\n",
+      "Overwriting existing file.\n",
+      "Writing /home/brooke/pacman/raw_data/BJH024/ieeg/BJH024_raw_clean_ieeg-1.fif\n",
+      "Overwriting existing file.\n",
+      "Writing /home/brooke/pacman/raw_data/BJH024/ieeg/BJH024_raw_clean_ieeg-2.fif\n",
+      "Closing /home/brooke/pacman/raw_data/BJH024/ieeg/BJH024_raw_clean_ieeg-2.fif\n",
+      "Closing /home/brooke/pacman/raw_data/BJH024/ieeg/BJH024_raw_clean_ieeg-1.fif\n",
+      "Closing /home/brooke/pacman/raw_data/BJH024/ieeg/BJH024_raw_clean_ieeg.fif\n",
+      "[done]\n"
+     ]
+    }
+   ],
    "source": [
     "# save filtered data #\n",
     "filtered_notch_data.save(f\"{raw_data_dir}/ieeg/{subject}_notched_filtered_clean_ieeg.fif\", overwrite = True)\n",
@@ -1159,6 +1257,14 @@
     "# save raw clean data #\n",
     "raw_fif.save(f\"{raw_data_dir}/ieeg/{subject}_raw_clean_ieeg.fif\", overwrite = True)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac3b806c-870b-47c9-a04b-2747bd5ee255",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
