--- a/raw_data/BJH025/scripts/BJH025_cleaning.ipynb
+++ b/raw_data/BJH025/scripts/BJH025_cleaning.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a3785b84-4aaa-4461-a37e-b51a7c1c7913",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1aff0958-6a4e-4e42-b7a6-80d00e5f63f3",
    "metadata": {},
    "outputs": [],
@@ -55,18 +55,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "639733c6-a51d-4ba2-b0bc-64689a345199",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: Ignoring XDG_SESSION_TYPE=wayland on Gnome. Use QT_QPA_PLATFORM=wayland to run on Wayland anyway.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# helper functions#\n",
     "\n",
@@ -96,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "2794e660-c449-4c7a-968f-87124f1044ea",
    "metadata": {},
    "outputs": [],
@@ -110,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "6e0deb60-8aca-4c57-a879-9fb9fb6d1d8e",
    "metadata": {},
    "outputs": [
@@ -135,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "22556d7c-0c0b-40fc-82b1-777357649e6e",
    "metadata": {},
    "outputs": [
@@ -188,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "06a738f0-dbc3-4e9b-807c-d21e8eb4fd28",
    "metadata": {},
    "outputs": [
@@ -220,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "c262fbb5-6908-4a46-b03c-d815dbe2dc0d",
    "metadata": {},
    "outputs": [
@@ -486,7 +478,7 @@
        " 'STI']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "7d0a4343-948a-4654-bc8f-db9c42ded9bb",
    "metadata": {},
    "outputs": [
@@ -594,7 +586,7 @@
        "<Raw | BJH025_notched_filtered_ieeg.fif, 257 x 2966400 (1483.2 s), ~258 kB, data not loaded>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "14a28078-93dd-4d34-b19b-a6ee581b9504",
    "metadata": {},
    "outputs": [
@@ -730,7 +722,7 @@
        "<Raw | BJH025_raw_ieeg.fif, 257 x 2966400 (1483.2 s), ~258 kB, data not loaded>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,83 +781,186 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b2bf3fa-52de-40bf-9e33-0d2f57157ad2",
+   "id": "7f0b86c5-dd5d-4ac8-b35a-40399cdfc724",
    "metadata": {},
    "source": [
-    "#### Bad Epochs\n",
+    "#### Bad Epochs from noisy data\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8f753563-acfd-4968-9f1a-2ec8274e9570",
+   "execution_count": 9,
+   "id": "46e4f626-8c07-42b6-9ad8-0700c5eb18a5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # Annotate Noisy Epochs from Bob's cleaning\n",
     "\n",
     "# read from csv from interactive session\n",
-    "bad_annots = mne.read_annotations('../ieeg/saved_annotations.fif')   \n",
-    "filtered_notch_data.set_annotations(bad_annots)\n",
-    "raw_fif.set_annotations(bad_annots)\n"
+    "bad_annots = mne.read_annotations('../ieeg/saved_annotations.fif')   \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "93a39942-a7c7-40ab-a009-8eae6c970cd7",
+   "id": "14bda1e0-23a9-4bf5-902d-bc4ab98f2de2",
    "metadata": {},
    "source": [
-    "## Cleaning Bad Trials"
+    "#### Bad epochs from bad trial data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "80fdc820-448a-482b-885b-487c0e9e486a",
+   "execution_count": 10,
+   "id": "b386d7a5-154f-4b28-96a1-1d71c10602e7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ## quality check trials ##\n",
     "\n",
-    "# # calculate trial onsets and offsets\n",
-    "# sti_raw = filtered_notch_data.get_data(picks = ['STI'])\n",
-    "# lengths, positionsm, val  = rle(sti_raw[0])\n",
+    "# calculate trial onsets and offsets\n",
+    "sti_raw = filtered_notch_data.get_data(picks = ['STI'])\n",
+    "lengths, positionsm, val  = rle(sti_raw[0])\n",
     "\n",
-    "# # lengths, beginnings, endings, for trials\n",
-    "# trial_lengths = [lengths[x] for x in np.where(val == 1)]\n",
-    "# trial_begins = [positionsm[x] for x in np.where(val == 1)]\n",
-    "# trial_ends = trial_lengths[0] + trial_begins[0]\n",
-    "# trial_baseline = trial_begins[0] - 1000\n",
+    "# lengths, beginnings, endings, for trials\n",
+    "trial_lengths = [lengths[x] for x in np.where(val == 1)]\n",
+    "trial_begins = [positionsm[x] for x in np.where(val == 1)]\n",
+    "trial_ends = trial_lengths[0] + trial_begins[0]\n",
+    "trial_baseline = trial_begins[0] - 1000\n",
     "\n",
-    "# # lengths, beginnings, endings, for itis\n",
-    "# iti_lengths = [lengths[x] for x in np.where(val == 0)]\n",
-    "# iti_begins = [positionsm[x] for x in np.where(val == 0)]\n",
-    "# iti_ends = iti_begins[0] + iti_lengths[0]\n",
+    "# lengths, beginnings, endings, for itis\n",
+    "iti_lengths = [lengths[x] for x in np.where(val == 0)]\n",
+    "iti_begins = [positionsm[x] for x in np.where(val == 0)]\n",
+    "iti_ends = iti_begins[0] + iti_lengths[0]\n",
     "\n",
-    "# # save trial lengths for later\n",
-    "# np.save(f\"{preproc_data_dir}/{subject}_trial_lengths.npy\", trial_lengths)"
+    "# save trial lengths for later\n",
+    "np.save(f\"{preproc_data_dir}/{subject}_trial_lengths.npy\", trial_lengths)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ec9911ea-8747-4d0d-985a-741289f97a3d",
+   "execution_count": 11,
+   "id": "482ddc59-6a5b-4224-a31a-e656ef72ff0d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # exclude bad trials/apochs from r behavioral analysis (paused trials and no biscuits)\n",
     "\n",
-    "# # load bad trial data\n",
-    "# bad_trials = np.genfromtxt(f\"{raw_data_dir}/behave/{subject}_bad_trials.csv\", delimiter = ',', skip_header = 1)\n",
+    "# load bad trial data\n",
+    "bad_trials = np.genfromtxt(f\"{raw_data_dir}/behave/{subject}_bad_trials.csv\", delimiter = ',', skip_header = 1)\n",
     "\n",
-    "# for bad in bad_trials:\n",
-    "#     start, dur = find_bad_trial_times(int(bad), 2000, trial_begins, trial_lengths)\n",
-    "#     onsets.append(start)\n",
-    "#     durations.append(dur)\n",
+    "onsets = []\n",
+    "durations = []\n",
+    "for bad in bad_trials:\n",
+    "    start, dur = find_bad_trial_times(int(bad), raw_fif.info['sfreq'], trial_begins, trial_lengths)\n",
+    "    onsets.append(start)\n",
+    "    durations.append(dur)\n",
     "\n",
-    "# # update descriptions\n",
-    "# descriptions = ['bad'] * len(durations)\n"
+    "# update descriptions\n",
+    "descriptions = ['bad'] * len(durations)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "aef8bd9a-7ceb-40da-b6ef-4f3958b6f463",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"table table-hover table-striped table-sm table-responsive small\">\n",
+       "    <tr>\n",
+       "        <th>Measurement date</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Experimenter</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "        <th>Participant</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Digitized points</th>\n",
+       "        \n",
+       "        <td>0 points</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Good channels</th>\n",
+       "        <td>256 sEEG, 1 Stimulus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Bad channels</th>\n",
+       "        <td>EMPTY, EMPTY_2, EMPTY_3, EMPTY_4, REF1, REF2, EMPTY_177, EMPTY_178, EMPTY_179, EMPTY_180, EMPTY_181, EMPTY_182, EMPTY_183, EMPTY_184, EMPTY_185, EMPTY_186, EMPTY_187, EMPTY_188, EMPTY_189, EMPTY_190, EMPTY_191, EMPTY_192, EMPTY_193, EMPTY_194, EMPTY_195, EMPTY_196, EMPTY_197, EMPTY_198, EMPTY_199, EMPTY_200, EMPTY_201, EMPTY_202, EMPTY_203, EMPTY_204, EMPTY_205, EMPTY_206, EMPTY_207, EMPTY_208, EMPTY_209, EMPTY_210, EMPTY_211, EMPTY_212, EMPTY_213, EMPTY_214, EMPTY_215, EMPTY_216, EMPTY_217, EMPTY_218, EMPTY_219, EMPTY_220, EMPTY_221, EMPTY_222, EMPTY_223, EMPTY_224, EMPTY_225, EMPTY_226, EMPTY_227, EMPTY_228, EMPTY_229, EMPTY_230, EMPTY_231, EKG1, EKG2, D8, HL1, HR1, FP1, F3_233, C3_234, P3, O1, FP2, F4_238, C4_239, P4, O2, F7_242, T7, P7, F8_245, T8, P8, F9, F10, FPZ, FZ, CZ, PZ, OZ, EKG1, EKG2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>EOG channels</th>\n",
+       "        <td>Not available</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>ECG channels</th>\n",
+       "        <td>Not available</td>\n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Sampling frequency</th>\n",
+       "        <td>2000.00 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Highpass</th>\n",
+       "        <td>0.00 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Lowpass</th>\n",
+       "        <td>1000.00 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Filenames</th>\n",
+       "        <td>BJH025_raw_ieeg.fif&lt;br&gt;BJH025_raw_ieeg-1.fif</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Duration</th>\n",
+       "        <td>00:24:43 (HH:MM:SS)</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Raw | BJH025_raw_ieeg.fif, 257 x 2966400 (1483.2 s), ~258 kB, data not loaded>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## exclude all bad epochs from both bad trials and investigating neural data ##\n",
+    "\n",
+    "# combine with bad trial data #\n",
+    "bad_annots.append(onsets, durations, descriptions)\n",
+    "\n",
+    "# # apply to filtered data #\n",
+    "filtered_notch_data.set_annotations(bad_annots)\n",
+    "\n",
+    "# # apply to not filtered data #\n",
+    "raw_fif.set_annotations(bad_annots)"
    ]
   },
   {
@@ -874,29 +969,6 @@
    "metadata": {},
    "source": [
     "## Visualizing Neural Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1cee4f7a-7c24-4001-aad1-a4290feeb1a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## exclude all bad epochs from both bad trials and investigating neural data ##\n",
-    "\n",
-    "# # create annotations structure #\n",
-    "# bad_annots = mne.Annotations(onset=onsets,\n",
-    "#                                duration=durations,\n",
-    "#                                description=descriptions,\n",
-    "#                                orig_time=filtered_notch_data.info['meas_date'])\n",
-    "\n",
-    "# # apply to filtered data #\n",
-    "# filtered_notch_data.set_annotations(bad_annots)\n",
-    "\n",
-    "\n",
-    "# # apply to not filtered data #\n",
-    "# raw_fif.set_annotations(bad_annots)"
    ]
   },
   {
@@ -911,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "bda36638-3ca9-4262-9c6d-abf8973a6fa2",
    "metadata": {},
    "outputs": [
@@ -992,7 +1064,7 @@
        "<Raw | BJH025_notched_filtered_ieeg.fif, 168 x 2966400 (1483.2 s), ~169 kB, data not loaded>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,12 +1184,12 @@
    ],
    "source": [
     "# From interactive sessions\n",
-    "interactive_annot = filtered_notch_data.annotations\n",
-    "for x in range(0, 10):\n",
-    "    print(interactive_annot[x])\n",
+    "# interactive_annot = filtered_notch_data.annotations\n",
+    "# for x in range(0, 10):\n",
+    "#     print(interactive_annot[x])\n",
     "    \n",
     "    \n",
-    "filtered_notch_data.annotations.save('../ieeg/saved_annotations.fif', overwrite = True)    "
+    "# filtered_notch_data.annotations.save('../ieeg/saved_annotations.fif', overwrite = True)    "
    ]
   },
   {
@@ -1130,10 +1202,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "83c9a275-c5bd-414a-a3a5-5d30bd0fe689",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting existing file.\n",
+      "Writing /home/brooke/pacman/raw_data/BJH025/ieeg/BJH025_notched_filtered_clean_ieeg.fif\n",
+      "Overwriting existing file.\n",
+      "Writing /home/brooke/pacman/raw_data/BJH025/ieeg/BJH025_notched_filtered_clean_ieeg-1.fif\n",
+      "Closing /home/brooke/pacman/raw_data/BJH025/ieeg/BJH025_notched_filtered_clean_ieeg-1.fif\n",
+      "Closing /home/brooke/pacman/raw_data/BJH025/ieeg/BJH025_notched_filtered_clean_ieeg.fif\n",
+      "[done]\n",
+      "Overwriting existing file.\n",
+      "Writing /home/brooke/pacman/raw_data/BJH025/ieeg/BJH025_raw_clean_ieeg.fif\n",
+      "Overwriting existing file.\n",
+      "Writing /home/brooke/pacman/raw_data/BJH025/ieeg/BJH025_raw_clean_ieeg-1.fif\n",
+      "Closing /home/brooke/pacman/raw_data/BJH025/ieeg/BJH025_raw_clean_ieeg-1.fif\n",
+      "Closing /home/brooke/pacman/raw_data/BJH025/ieeg/BJH025_raw_clean_ieeg.fif\n",
+      "[done]\n"
+     ]
+    }
+   ],
    "source": [
     "# save filtered data #\n",
     "filtered_notch_data.save(f\"{raw_data_dir}/ieeg/{subject}_notched_filtered_clean_ieeg.fif\", overwrite = True)\n",
@@ -1142,6 +1235,14 @@
     "# save raw clean data #\n",
     "raw_fif.save(f\"{raw_data_dir}/ieeg/{subject}_raw_clean_ieeg.fif\", overwrite = True)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ec88466-74ea-4044-8301-5736fe9c3045",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
