--- a/raw_data/LL13/scripts/LL13_cleaning.ipynb
+++ b/raw_data/LL13/scripts/LL13_cleaning.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "import matplotlib\n",
-    "matplotlib.use(\"Qt5Agg\")\n",
+    "matplotlib.use(\"Qt5 Agg\")\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "639733c6-a51d-4ba2-b0bc-64689a345199",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2794e660-c449-4c7a-968f-87124f1044ea",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6e0deb60-8aca-4c57-a879-9fb9fb6d1d8e",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "22556d7c-0c0b-40fc-82b1-777357649e6e",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "<Raw | LL13_raw_ieeg.fif, 149 x 901100 (1760.0 s), ~1.00 GB, data loaded>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "06a738f0-dbc3-4e9b-807c-d21e8eb4fd28",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "c262fbb5-6908-4a46-b03c-d815dbe2dc0d",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        " 'STI']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "7d0a4343-948a-4654-bc8f-db9c42ded9bb",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
        "<Raw | LL13_notched_filtered_ieeg.fif, 149 x 901100 (1760.0 s), ~156 kB, data not loaded>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "14a28078-93dd-4d34-b19b-a6ee581b9504",
    "metadata": {},
    "outputs": [
@@ -665,7 +665,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "        <th>Bad channels</th>\n",
-       "        <td>CH47, CH54, CH53, CH13, CH6, CH7, CH2, CH3, CH4, CH5, CH65, CH89, CH90, CH91, CH92, CH93, CH94, CH95, CH96, CH97, CH98, CH99, CH100, CH101, CH102, CH103, CH104, CH105, CH106, CH107, CH108, CH109, CH110, CH111, CH112, CH113, CH114, CH115, CH116, CH117, CH118, CH119, CH120, CH121, CH122, CH123, CH124, CH125, CH126, CH127, CH128, CH129, CH130, CH131, CH132, CH133, CH134, CH135, CH136, CH137, CH138, CH139, CH140, CH141, CH142, CH143, CH144, CH145, CH146, CH147, CH48, CH47, CH54, CH53, CH13, CH6, CH7, CH2, CH3, CH4, CH5, CH65, CH89, CH0, CH1, CH90, CH91, CH92, CH93, CH94, CH95, CH96, CH97, CH98, CH99, CH100, CH101, CH102, CH103, CH104, CH105, CH106, CH107, CH108, CH109, CH110, CH111, CH112, CH113, CH114, CH115, CH116, CH117, CH118, CH119, CH120, CH121, CH122, CH123, CH124, CH125, CH126, CH127, CH128, CH129, CH130, CH131, CH132, CH133, CH134, CH135, CH136, CH137, CH138, CH139, CH140, CH141, CH142, CH143, CH144, CH145, CH146, CH147</td>\n",
+       "        <td>CH48, CH47, CH54, CH53, CH13, CH6, CH7, CH2, CH3, CH4, CH5, CH65, CH89, CH0, CH1, CH90, CH91, CH92, CH93, CH94, CH95, CH96, CH97, CH98, CH99, CH100, CH101, CH102, CH103, CH104, CH105, CH106, CH107, CH108, CH109, CH110, CH111, CH112, CH113, CH114, CH115, CH116, CH117, CH118, CH119, CH120, CH121, CH122, CH123, CH124, CH125, CH126, CH127, CH128, CH129, CH130, CH131, CH132, CH133, CH134, CH135, CH136, CH137, CH138, CH139, CH140, CH141, CH142, CH143, CH144, CH145, CH146, CH147</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <th>EOG channels</th>\n",
@@ -709,7 +709,7 @@
        "<Raw | LL13_raw_ieeg.fif, 149 x 901100 (1760.0 s), ~1.00 GB, data loaded>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,13 +800,13 @@
    "id": "5b2bf3fa-52de-40bf-9e33-0d2f57157ad2",
    "metadata": {},
    "source": [
-    "#### Bad Epochs\n",
+    "#### Bad Epochs from noisy data\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8f753563-acfd-4968-9f1a-2ec8274e9570",
    "metadata": {},
    "outputs": [],
@@ -814,9 +814,7 @@
     "# # Annotate Noisy Epochs from Bob's cleaning\n",
     "\n",
     "# read from csv from interactive session\n",
-    "bad_annots = mne.read_annotations('../ieeg/saved_annotations.fif')   \n",
-    "filtered_notch_data.set_annotations(bad_annots)\n",
-    "raw_fif.set_annotations(bad_annots)\n"
+    "bad_annots = mne.read_annotations('../ieeg/saved_annotations.fif')   \n"
    ]
   },
   {
@@ -824,56 +822,161 @@
    "id": "93a39942-a7c7-40ab-a009-8eae6c970cd7",
    "metadata": {},
    "source": [
-    "## Cleaning Bad Trials"
+    "#### Bad epochs from bad trial data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "80fdc820-448a-482b-885b-487c0e9e486a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ## quality check trials ##\n",
     "\n",
-    "# # calculate trial onsets and offsets\n",
-    "# sti_raw = filtered_notch_data.get_data(picks = ['STI'])\n",
-    "# lengths, positionsm, val  = rle(sti_raw[0])\n",
+    "# calculate trial onsets and offsets\n",
+    "sti_raw = filtered_notch_data.get_data(picks = ['STI'])\n",
+    "lengths, positionsm, val  = rle(sti_raw[0])\n",
     "\n",
-    "# # lengths, beginnings, endings, for trials\n",
-    "# trial_lengths = [lengths[x] for x in np.where(val == 1)]\n",
-    "# trial_begins = [positionsm[x] for x in np.where(val == 1)]\n",
-    "# trial_ends = trial_lengths[0] + trial_begins[0]\n",
-    "# trial_baseline = trial_begins[0] - 1000\n",
+    "# lengths, beginnings, endings, for trials\n",
+    "trial_lengths = [lengths[x] for x in np.where(val == 1)]\n",
+    "trial_begins = [positionsm[x] for x in np.where(val == 1)]\n",
+    "trial_ends = trial_lengths[0] + trial_begins[0]\n",
+    "trial_baseline = trial_begins[0] - 1000\n",
     "\n",
-    "# # lengths, beginnings, endings, for itis\n",
-    "# iti_lengths = [lengths[x] for x in np.where(val == 0)]\n",
-    "# iti_begins = [positionsm[x] for x in np.where(val == 0)]\n",
-    "# iti_ends = iti_begins[0] + iti_lengths[0]\n",
+    "# lengths, beginnings, endings, for itis\n",
+    "iti_lengths = [lengths[x] for x in np.where(val == 0)]\n",
+    "iti_begins = [positionsm[x] for x in np.where(val == 0)]\n",
+    "iti_ends = iti_begins[0] + iti_lengths[0]\n",
     "\n",
-    "# # save trial lengths for later\n",
-    "# np.save(f\"{preproc_data_dir}/{subject}_trial_lengths.npy\", trial_lengths)"
+    "# save trial lengths for later\n",
+    "np.save(f\"{preproc_data_dir}/{subject}_trial_lengths.npy\", trial_lengths)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ec9911ea-8747-4d0d-985a-741289f97a3d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # exclude bad trials/apochs from r behavioral analysis (paused trials and no biscuits)\n",
     "\n",
-    "# # load bad trial data\n",
-    "# bad_trials = np.genfromtxt(f\"{raw_data_dir}/behave/{subject}_bad_trials.csv\", delimiter = ',', skip_header = 1)\n",
+    "# load bad trial data\n",
+    "bad_trials = np.genfromtxt(f\"{raw_data_dir}/behave/{subject}_bad_trials.csv\", delimiter = ',', skip_header = 1)\n",
     "\n",
-    "# for bad in bad_trials:\n",
-    "#     start, dur = find_bad_trial_times(int(bad), 2000, trial_begins, trial_lengths)\n",
-    "#     onsets.append(start)\n",
-    "#     durations.append(dur)\n",
+    "onsets = []\n",
+    "durations = []\n",
+    "for bad in bad_trials:\n",
+    "    start, dur = find_bad_trial_times(int(bad), raw_fif.info['sfreq'], trial_begins, trial_lengths)\n",
+    "    onsets.append(start)\n",
+    "    durations.append(dur)\n",
     "\n",
-    "# # update descriptions\n",
-    "# descriptions = ['bad'] * len(durations)\n"
+    "# update descriptions\n",
+    "descriptions = ['bad'] * len(durations)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1cee4f7a-7c24-4001-aad1-a4290feeb1a8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"table table-hover table-striped table-sm table-responsive small\">\n",
+       "    <tr>\n",
+       "        <th>Measurement date</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Experimenter</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "        <th>Participant</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Digitized points</th>\n",
+       "        \n",
+       "        <td>0 points</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Good channels</th>\n",
+       "        <td>148 sEEG, 1 Stimulus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Bad channels</th>\n",
+       "        <td>CH48, CH47, CH54, CH53, CH13, CH6, CH7, CH2, CH3, CH4, CH5, CH65, CH89, CH0, CH1, CH90, CH91, CH92, CH93, CH94, CH95, CH96, CH97, CH98, CH99, CH100, CH101, CH102, CH103, CH104, CH105, CH106, CH107, CH108, CH109, CH110, CH111, CH112, CH113, CH114, CH115, CH116, CH117, CH118, CH119, CH120, CH121, CH122, CH123, CH124, CH125, CH126, CH127, CH128, CH129, CH130, CH131, CH132, CH133, CH134, CH135, CH136, CH137, CH138, CH139, CH140, CH141, CH142, CH143, CH144, CH145, CH146, CH147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>EOG channels</th>\n",
+       "        <td>Not available</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>ECG channels</th>\n",
+       "        <td>Not available</td>\n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Sampling frequency</th>\n",
+       "        <td>512.00 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Highpass</th>\n",
+       "        <td>0.00 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Lowpass</th>\n",
+       "        <td>256.00 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Filenames</th>\n",
+       "        <td>LL13_raw_ieeg.fif</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Duration</th>\n",
+       "        <td>00:29:19 (HH:MM:SS)</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Raw | LL13_raw_ieeg.fif, 149 x 901100 (1760.0 s), ~1.00 GB, data loaded>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## exclude all bad epochs from both bad trials and investigating neural data ##\n",
+    "\n",
+    "# combine with bad trial data #\n",
+    "bad_annots.append(onsets, durations, descriptions)\n",
+    "\n",
+    "# # apply to filtered data #\n",
+    "filtered_notch_data.set_annotations(bad_annots)\n",
+    "\n",
+    "# # apply to not filtered data #\n",
+    "raw_fif.set_annotations(bad_annots)"
    ]
   },
   {
@@ -882,29 +985,6 @@
    "metadata": {},
    "source": [
     "## Visualizing Neural Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1cee4f7a-7c24-4001-aad1-a4290feeb1a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## exclude all bad epochs from both bad trials and investigating neural data ##\n",
-    "\n",
-    "# # create annotations structure #\n",
-    "# bad_annots = mne.Annotations(onset=onsets,\n",
-    "#                                duration=durations,\n",
-    "#                                description=descriptions,\n",
-    "#                                orig_time=filtered_notch_data.info['meas_date'])\n",
-    "\n",
-    "# # apply to filtered data #\n",
-    "# filtered_notch_data.set_annotations(bad_annots)\n",
-    "\n",
-    "\n",
-    "# # apply to not filtered data #\n",
-    "# raw_fif.set_annotations(bad_annots)"
    ]
   },
   {
@@ -919,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "bb9118c0-e75c-418f-b665-5da58684182f",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1080,7 @@
        "<Raw | LL13_notched_filtered_ieeg.fif, 76 x 901100 (1760.0 s), ~80 kB, data not loaded>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1232,7 @@
     }
    ],
    "source": [
-    "filtered_notch_data.annotations"
+    "#filtered_notch_data.annotations"
    ]
   },
   {
@@ -1204,13 +1284,13 @@
     }
    ],
    "source": [
-    "# From interactive sessions\n",
-    "interactive_annot = filtered_notch_data.annotations\n",
-    "for x in range(0, 26):\n",
-    "    print(interactive_annot[x])\n",
+    "# # From interactive sessions\n",
+    "# interactive_annot = filtered_notch_data.annotations\n",
+    "# for x in range(0, 26):\n",
+    "#     print(interactive_annot[x])\n",
     "    \n",
     "    \n",
-    "filtered_notch_data.annotations[0:26].save('../ieeg/saved_annotations.fif', overwrite = True)    "
+    "# filtered_notch_data.annotations[0:26].save('../ieeg/saved_annotations.fif', overwrite = True)    "
    ]
   },
   {
@@ -1223,10 +1303,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "83c9a275-c5bd-414a-a3a5-5d30bd0fe689",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting existing file.\n",
+      "Writing /home/brooke/pacman/raw_data/LL13/ieeg/LL13_notched_filtered_clean_ieeg.fif\n",
+      "Closing /home/brooke/pacman/raw_data/LL13/ieeg/LL13_notched_filtered_clean_ieeg.fif\n",
+      "[done]\n",
+      "Overwriting existing file.\n",
+      "Writing /home/brooke/pacman/raw_data/LL13/ieeg/LL13_raw_clean_ieeg.fif\n",
+      "Closing /home/brooke/pacman/raw_data/LL13/ieeg/LL13_raw_clean_ieeg.fif\n",
+      "[done]\n"
+     ]
+    }
+   ],
    "source": [
     "# save filtered data #\n",
     "filtered_notch_data.save(f\"{raw_data_dir}/ieeg/{subject}_notched_filtered_clean_ieeg.fif\", overwrite = True)\n",
@@ -1235,6 +1330,14 @@
     "# save raw clean data #\n",
     "raw_fif.save(f\"{raw_data_dir}/ieeg/{subject}_raw_clean_ieeg.fif\", overwrite = True)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49102c46-4d12-443d-98b3-d5c3aa2fb968",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
