--- a/script_templates/cleaning.ipynb
+++ b/script_templates/cleaning.ipynb
@@ -245,76 +245,38 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b2bf3fa-52de-40bf-9e33-0d2f57157ad2",
+   "id": "3b53c7d3-8102-4a30-b63d-51b8a318ff07",
    "metadata": {},
    "source": [
-    "#### Bad Epochs\n",
+    "#### Bad Epochs from noisy data\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8f753563-acfd-4968-9f1a-2ec8274e9570",
+   "execution_count": 11,
+   "id": "2e29013c-e568-447a-a47b-481b93e9882b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # Annotate Noisy Epochs from Bob's cleaning\n",
     "\n",
-    "# ### Filtered\n",
-    "\n",
-    "# onsets = [filtered_notch_data\n",
-    "#     filtered_notch_data.first_time + 78, #2\n",
-    "#     filtered_notch_data.first_time + 173, #2\n",
-    "#     filtered_notch_data.first_time + 414, #2\n",
-    "#     filtered_notch_data.first_time + 438, #1\n",
-    "#     filtered_notch_data.first_time + 475, #.6\n",
-    "#     filtered_notch_data.first_time + 564, #1\n",
-    "#     filtered_notch_data.first_time + 625, #2\n",
-    "#     filtered_notch_data.first_time + 654.5, #1\n",
-    "#     filtered_notch_data.first_time + 690, #1\n",
-    "#     filtered_notch_data.first_time + 736.75, #1\n",
-    "#     filtered_notch_data.first_time + 852, #1\n",
-    "#     filtered_notch_data.first_time + 1391 #2\n",
-    "    \n",
-    "# ]\n",
-    "\n",
-    "# ### Raw\n",
-    "\n",
-    "# onsets = [\n",
-    "#     raw_fif.first_time + 78, #2\n",
-    "#     raw_fif.first_time + 173, #2\n",
-    "#     raw_fif.first_time + 414, #2\n",
-    "#     raw_fif.first_time + 438, #1\n",
-    "#     raw_fif.first_time + 475, # .6\n",
-    "#     raw_fif.first_time + 564, #1\n",
-    "#     raw_fif.first_time + 625, #2\n",
-    "#     raw_fif.first_time + 654.5, #1\n",
-    "#     raw_fif.first_time + 690, #1\n",
-    "#     raw_fif.first_time + 736.75, #1\n",
-    "#     raw_fif.first_time + 852, #1    \n",
-    "#     raw_fif.first_time + 1391 #2\n",
-    "    \n",
-    "    \n",
-    "# ]\n",
-    "\n",
-    "\n",
-    "# durations = [2, 2, 2, 1, .6, 1, 2, 1, 1, 1, 1, 2]\n",
-    "# descriptions = ['bad'] * len(durations)\n"
+    "# # read from csv from interactive session\n",
+    "# bad_annots = mne.read_annotations('../ieeg/saved_annotations.fif')   \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "93a39942-a7c7-40ab-a009-8eae6c970cd7",
+   "id": "db730472-6e06-4a31-a66b-fa5db1600bc7",
    "metadata": {},
    "source": [
-    "## Cleaning Bad Trials"
+    "#### Bad epochs from bad trial data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "80fdc820-448a-482b-885b-487c0e9e486a",
+   "execution_count": 12,
+   "id": "4cd44147-ed15-4bd4-b6c4-5dd845908831",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,8 +303,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ec9911ea-8747-4d0d-985a-741289f97a3d",
+   "execution_count": 13,
+   "id": "fe17aab8-72f4-4400-97d5-2abfa5771abc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,8 +313,10 @@
     "# # load bad trial data\n",
     "# bad_trials = np.genfromtxt(f\"{raw_data_dir}/behave/{subject}_bad_trials.csv\", delimiter = ',', skip_header = 1)\n",
     "\n",
+    "# onsets = []\n",
+    "# durations = []\n",
     "# for bad in bad_trials:\n",
-    "#     start, dur = find_bad_trial_times(int(bad), 2000, trial_begins, trial_lengths)\n",
+    "#     start, dur = find_bad_trial_times(int(bad), raw_fif.info['sfreq'], trial_begins, trial_lengths)\n",
     "#     onsets.append(start)\n",
     "#     durations.append(dur)\n",
     "\n",
@@ -361,34 +325,114 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a2d684d1-c82d-4f87-b37e-aca09a1e95ed",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"table table-hover table-striped table-sm table-responsive small\">\n",
+       "    <tr>\n",
+       "        <th>Measurement date</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Experimenter</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "        <th>Participant</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Digitized points</th>\n",
+       "        \n",
+       "        <td>0 points</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Good channels</th>\n",
+       "        <td>148 sEEG, 1 Stimulus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Bad channels</th>\n",
+       "        <td>CH48, CH47, CH54, CH53, CH13, CH6, CH7, CH2, CH3, CH4, CH5, CH65, CH89, CH0, CH1, CH90, CH91, CH92, CH93, CH94, CH95, CH96, CH97, CH98, CH99, CH100, CH101, CH102, CH103, CH104, CH105, CH106, CH107, CH108, CH109, CH110, CH111, CH112, CH113, CH114, CH115, CH116, CH117, CH118, CH119, CH120, CH121, CH122, CH123, CH124, CH125, CH126, CH127, CH128, CH129, CH130, CH131, CH132, CH133, CH134, CH135, CH136, CH137, CH138, CH139, CH140, CH141, CH142, CH143, CH144, CH145, CH146, CH147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>EOG channels</th>\n",
+       "        <td>Not available</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>ECG channels</th>\n",
+       "        <td>Not available</td>\n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Sampling frequency</th>\n",
+       "        <td>512.00 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Highpass</th>\n",
+       "        <td>0.00 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Lowpass</th>\n",
+       "        <td>256.00 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Filenames</th>\n",
+       "        <td>LL13_raw_ieeg.fif</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Duration</th>\n",
+       "        <td>00:29:19 (HH:MM:SS)</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Raw | LL13_raw_ieeg.fif, 149 x 901100 (1760.0 s), ~1.00 GB, data loaded>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## exclude all bad epochs from both bad trials and investigating neural data ##\n",
+    "\n",
+    "# # combine with bad trial data #\n",
+    "# bad_annots.append(onsets, durations, descriptions)\n",
+    "\n",
+    "# # # apply to filtered data #\n",
+    "# filtered_notch_data.set_annotations(bad_annots)\n",
+    "\n",
+    "# # # apply to not filtered data #\n",
+    "# raw_fif.set_annotations(bad_annots)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "304972b6-3d35-4319-93bc-c13753ecf6f7",
    "metadata": {},
    "source": [
     "## Visualizing Neural Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1cee4f7a-7c24-4001-aad1-a4290feeb1a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## exclude all bad epochs from both bad trials and investigating neural data ##\n",
-    "\n",
-    "# # create annotations structure #\n",
-    "# bad_annots = mne.Annotations(onset=onsets,\n",
-    "#                                duration=durations,\n",
-    "#                                description=descriptions,\n",
-    "#                                orig_time=filtered_notch_data.info['meas_date'])\n",
-    "\n",
-    "# # apply to filtered data #\n",
-    "# filtered_notch_data.set_annotations(bad_annots)\n",
-    "\n",
-    "\n",
-    "# # apply to not filtered data #\n",
-    "# raw_fif.set_annotations(bad_annots)"
    ]
   },
   {
